@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-26T16:11:48Z",
+  "timestamp" : "2023-10-27T00:42:22Z",
   "count_outdated" : 5552,
   "uniques_outdated" : 1809,
-  "count" : 5667,
-  "uniques" : 1890,
+  "count" : 5668,
+  "uniques" : 1891,
   "clones" : [
     {
       "timestamp": "2023-10-13T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
