@@ -1,6 +1,6 @@
 {
-  "count": 115,
-  "uniques": 57,
+  "count": 116,
+  "uniques": 58,
   "clones": [
     {
       "timestamp": "2023-10-13T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
