@@ -1,3 +1,12 @@
+2023-10-27T00:42:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6661401123 # 2021
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
+* notice: last 14d: unq all: 58 116
+* notice: prev accum: outdated-unq outdated-all / unq all: 1809 5552 / 1890 5667
+* notice: next accum: outdated-unq outdated-all / unq all: 1809 5552 / 1891 5668
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-10-26]
+
 2023-10-26T16:11:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6656844467 # 2020
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
